# src/main/java/com/sunsetbeach/model/AuditAction.java
@@ -38,6 +38,12 @@ public enum AuditAction {
   
   BOOKING_REPRICED("BOOKING_REPRICED"),
   
+  BOOKING_CHECKED_IN("BOOKING_CHECKED_IN"),
+  
+  BOOKING_CHECKED_OUT("BOOKING_CHECKED_OUT"),
+  
+  BOOKING_NO_SHOW_MARKED("BOOKING_NO_SHOW_MARKED"),
+  
   BOOKINGS_EXPORTED("BOOKINGS_EXPORTED"),
   
   ROOM_PRICE_CHANGED("ROOM_PRICE_CHANGED"),
@@ -72,7 +78,9 @@ public enum AuditAction {
   
   ROOM_UNIT_BLOCK_CREATED("ROOM_UNIT_BLOCK_CREATED"),
   
-  ROOM_UNIT_BLOCK_DELETED("ROOM_UNIT_BLOCK_DELETED");
+  ROOM_UNIT_BLOCK_DELETED("ROOM_UNIT_BLOCK_DELETED"),
+  
+  ROOM_UNIT_HOUSEKEEPING_CHANGED("ROOM_UNIT_HOUSEKEEPING_CHANGED");
 
   private String value;
 
